--- a/nrfi.html
+++ b/nrfi.html
@@ -26,100 +26,217 @@ a:hover {text-decoration: underline;}
 </div>
 
 
-<h1 style='text-align:center;font-family:sans-serif;'>NRFI Predictions for 2025-05-15</h1>
+<h1 style='text-align:center;font-family:sans-serif;'>NRFI Predictions for 2025-05-16</h1>
 <style type="text/css">
-#T_8500f_row0_col0, #T_8500f_row0_col1, #T_8500f_row0_col2, #T_8500f_row0_col3, #T_8500f_row0_col4, #T_8500f_row0_col5, #T_8500f_row0_col6 {
+#T_30ba0_row0_col0, #T_30ba0_row0_col1, #T_30ba0_row0_col2, #T_30ba0_row0_col3, #T_30ba0_row0_col4, #T_30ba0_row0_col5, #T_30ba0_row0_col6 {
   background-color: rgba(0, 104, 55, 0.6);
 }
-#T_8500f_row1_col0, #T_8500f_row1_col1, #T_8500f_row1_col2, #T_8500f_row1_col3, #T_8500f_row1_col4, #T_8500f_row1_col5, #T_8500f_row1_col6 {
-  background-color: rgba(102, 189, 99, 0.6);
+#T_30ba0_row1_col0, #T_30ba0_row1_col1, #T_30ba0_row1_col2, #T_30ba0_row1_col3, #T_30ba0_row1_col4, #T_30ba0_row1_col5, #T_30ba0_row1_col6 {
+  background-color: rgba(18, 137, 72, 0.6);
 }
-#T_8500f_row2_col0, #T_8500f_row2_col1, #T_8500f_row2_col2, #T_8500f_row2_col3, #T_8500f_row2_col4, #T_8500f_row2_col5, #T_8500f_row2_col6 {
-  background-color: rgba(217, 239, 139, 0.6);
+#T_30ba0_row2_col0, #T_30ba0_row2_col1, #T_30ba0_row2_col2, #T_30ba0_row2_col3, #T_30ba0_row2_col4, #T_30ba0_row2_col5, #T_30ba0_row2_col6 {
+  background-color: rgba(57, 167, 87, 0.6);
 }
-#T_8500f_row3_col0, #T_8500f_row3_col1, #T_8500f_row3_col2, #T_8500f_row3_col3, #T_8500f_row3_col4, #T_8500f_row3_col5, #T_8500f_row3_col6 {
-  background-color: rgba(254, 224, 139, 0.6);
+#T_30ba0_row3_col0, #T_30ba0_row3_col1, #T_30ba0_row3_col2, #T_30ba0_row3_col3, #T_30ba0_row3_col4, #T_30ba0_row3_col5, #T_30ba0_row3_col6 {
+  background-color: rgba(109, 192, 99, 0.6);
 }
-#T_8500f_row4_col0, #T_8500f_row4_col1, #T_8500f_row4_col2, #T_8500f_row4_col3, #T_8500f_row4_col4, #T_8500f_row4_col5, #T_8500f_row4_col6 {
-  background-color: rgba(244, 109, 67, 0.6);
+#T_30ba0_row4_col0, #T_30ba0_row4_col1, #T_30ba0_row4_col2, #T_30ba0_row4_col3, #T_30ba0_row4_col4, #T_30ba0_row4_col5, #T_30ba0_row4_col6 {
+  background-color: rgba(157, 213, 105, 0.6);
 }
-#T_8500f_row5_col0, #T_8500f_row5_col1, #T_8500f_row5_col2, #T_8500f_row5_col3, #T_8500f_row5_col4, #T_8500f_row5_col5, #T_8500f_row5_col6 {
+#T_30ba0_row5_col0, #T_30ba0_row5_col1, #T_30ba0_row5_col2, #T_30ba0_row5_col3, #T_30ba0_row5_col4, #T_30ba0_row5_col5, #T_30ba0_row5_col6 {
+  background-color: rgba(195, 229, 124, 0.6);
+}
+#T_30ba0_row6_col0, #T_30ba0_row6_col1, #T_30ba0_row6_col2, #T_30ba0_row6_col3, #T_30ba0_row6_col4, #T_30ba0_row6_col5, #T_30ba0_row6_col6 {
+  background-color: rgba(227, 243, 153, 0.6);
+}
+#T_30ba0_row7_col0, #T_30ba0_row7_col1, #T_30ba0_row7_col2, #T_30ba0_row7_col3, #T_30ba0_row7_col4, #T_30ba0_row7_col5, #T_30ba0_row7_col6 {
+  background-color: rgba(254, 254, 189, 0.6);
+}
+#T_30ba0_row8_col0, #T_30ba0_row8_col1, #T_30ba0_row8_col2, #T_30ba0_row8_col3, #T_30ba0_row8_col4, #T_30ba0_row8_col5, #T_30ba0_row8_col6 {
+  background-color: rgba(254, 232, 153, 0.6);
+}
+#T_30ba0_row9_col0, #T_30ba0_row9_col1, #T_30ba0_row9_col2, #T_30ba0_row9_col3, #T_30ba0_row9_col4, #T_30ba0_row9_col5, #T_30ba0_row9_col6 {
+  background-color: rgba(253, 202, 120, 0.6);
+}
+#T_30ba0_row10_col0, #T_30ba0_row10_col1, #T_30ba0_row10_col2, #T_30ba0_row10_col3, #T_30ba0_row10_col4, #T_30ba0_row10_col5, #T_30ba0_row10_col6 {
+  background-color: rgba(251, 165, 92, 0.6);
+}
+#T_30ba0_row11_col0, #T_30ba0_row11_col1, #T_30ba0_row11_col2, #T_30ba0_row11_col3, #T_30ba0_row11_col4, #T_30ba0_row11_col5, #T_30ba0_row11_col6 {
+  background-color: rgba(245, 116, 70, 0.6);
+}
+#T_30ba0_row12_col0, #T_30ba0_row12_col1, #T_30ba0_row12_col2, #T_30ba0_row12_col3, #T_30ba0_row12_col4, #T_30ba0_row12_col5, #T_30ba0_row12_col6 {
+  background-color: rgba(226, 73, 50, 0.6);
+}
+#T_30ba0_row13_col0, #T_30ba0_row13_col1, #T_30ba0_row13_col2, #T_30ba0_row13_col3, #T_30ba0_row13_col4, #T_30ba0_row13_col5, #T_30ba0_row13_col6 {
+  background-color: rgba(200, 33, 38, 0.6);
+}
+#T_30ba0_row14_col0, #T_30ba0_row14_col1, #T_30ba0_row14_col2, #T_30ba0_row14_col3, #T_30ba0_row14_col4, #T_30ba0_row14_col5, #T_30ba0_row14_col6 {
   background-color: rgba(165, 0, 38, 0.6);
 }
 </style>
-<table id="T_8500f">
+<table id="T_30ba0">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
-      <th id="T_8500f_level0_col0" class="col_heading level0 col0" >Game Time</th>
-      <th id="T_8500f_level0_col1" class="col_heading level0 col1" >Matchup</th>
-      <th id="T_8500f_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
-      <th id="T_8500f_level0_col3" class="col_heading level0 col3" >Away Pitcher</th>
-      <th id="T_8500f_level0_col4" class="col_heading level0 col4" >Top Half NRFI (%)</th>
-      <th id="T_8500f_level0_col5" class="col_heading level0 col5" >Bottom Half NRFI (%)</th>
-      <th id="T_8500f_level0_col6" class="col_heading level0 col6" >Final NRFI Probability (%)</th>
+      <th id="T_30ba0_level0_col0" class="col_heading level0 col0" >Game Time</th>
+      <th id="T_30ba0_level0_col1" class="col_heading level0 col1" >Matchup</th>
+      <th id="T_30ba0_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
+      <th id="T_30ba0_level0_col3" class="col_heading level0 col3" >Away Pitcher</th>
+      <th id="T_30ba0_level0_col4" class="col_heading level0 col4" >Top Half NRFI (%)</th>
+      <th id="T_30ba0_level0_col5" class="col_heading level0 col5" >Bottom Half NRFI (%)</th>
+      <th id="T_30ba0_level0_col6" class="col_heading level0 col6" >Final NRFI Probability (%)</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th id="T_8500f_level0_row0" class="row_heading level0 row0" >1</th>
-      <td id="T_8500f_row0_col0" class="data row0 col0" >None</td>
-      <td id="T_8500f_row0_col1" class="data row0 col1" >minnesotatwins vs baltimoreorioles</td>
-      <td id="T_8500f_row0_col2" class="data row0 col2" >Tomoyuki Sugano</td>
-      <td id="T_8500f_row0_col3" class="data row0 col3" >Chris Paddack</td>
-      <td id="T_8500f_row0_col4" class="data row0 col4" >5.300000</td>
-      <td id="T_8500f_row0_col5" class="data row0 col5" >4.200000</td>
-      <td id="T_8500f_row0_col6" class="data row0 col6" >0.200000</td>
+      <th id="T_30ba0_level0_row0" class="row_heading level0 row0" >0</th>
+      <td id="T_30ba0_row0_col0" class="data row0 col0" >None</td>
+      <td id="T_30ba0_row0_col1" class="data row0 col1" >chicagowhitesox vs chicagocubs</td>
+      <td id="T_30ba0_row0_col2" class="data row0 col2" >Cade Horton</td>
+      <td id="T_30ba0_row0_col3" class="data row0 col3" >Shane Smith</td>
+      <td id="T_30ba0_row0_col4" class="data row0 col4" >7.400000</td>
+      <td id="T_30ba0_row0_col5" class="data row0 col5" >0.000000</td>
+      <td id="T_30ba0_row0_col6" class="data row0 col6" >0.000000</td>
     </tr>
     <tr>
-      <th id="T_8500f_level0_row1" class="row_heading level0 row1" >2</th>
-      <td id="T_8500f_row1_col0" class="data row1 col0" >None</td>
-      <td id="T_8500f_row1_col1" class="data row1 col1" >chicagowhitesox vs cincinnatireds</td>
-      <td id="T_8500f_row1_col2" class="data row1 col2" >Nick Martinez</td>
-      <td id="T_8500f_row1_col3" class="data row1 col3" >Bryse Wilson</td>
-      <td id="T_8500f_row1_col4" class="data row1 col4" >5.700000</td>
-      <td id="T_8500f_row1_col5" class="data row1 col5" >6.100000</td>
-      <td id="T_8500f_row1_col6" class="data row1 col6" >0.300000</td>
+      <th id="T_30ba0_level0_row1" class="row_heading level0 row1" >12</th>
+      <td id="T_30ba0_row1_col0" class="data row1 col0" >None</td>
+      <td id="T_30ba0_row1_col1" class="data row1 col1" >seattlemariners vs sandiegopadres</td>
+      <td id="T_30ba0_row1_col2" class="data row1 col2" >Stephen Kolek</td>
+      <td id="T_30ba0_row1_col3" class="data row1 col3" >Logan Evans</td>
+      <td id="T_30ba0_row1_col4" class="data row1 col4" >0.000000</td>
+      <td id="T_30ba0_row1_col5" class="data row1 col5" >4.200000</td>
+      <td id="T_30ba0_row1_col6" class="data row1 col6" >0.000000</td>
     </tr>
     <tr>
-      <th id="T_8500f_level0_row2" class="row_heading level0 row2" >3</th>
-      <td id="T_8500f_row2_col0" class="data row2 col0" >None</td>
-      <td id="T_8500f_row2_col1" class="data row2 col1" >tampabayrays vs torontobluejays</td>
-      <td id="T_8500f_row2_col2" class="data row2 col2" >Kevin Gausman</td>
-      <td id="T_8500f_row2_col3" class="data row2 col3" >Zack Littell</td>
-      <td id="T_8500f_row2_col4" class="data row2 col4" >6.500000</td>
-      <td id="T_8500f_row2_col5" class="data row2 col5" >4.600000</td>
-      <td id="T_8500f_row2_col6" class="data row2 col6" >0.300000</td>
+      <th id="T_30ba0_level0_row2" class="row_heading level0 row2" >9</th>
+      <td id="T_30ba0_row2_col0" class="data row2 col0" >None</td>
+      <td id="T_30ba0_row2_col1" class="data row2 col1" >houstonastros vs texasrangers</td>
+      <td id="T_30ba0_row2_col2" class="data row2 col2" >Nathan Eovaldi</td>
+      <td id="T_30ba0_row2_col3" class="data row2 col3" >Lance McCullers</td>
+      <td id="T_30ba0_row2_col4" class="data row2 col4" >1.200000</td>
+      <td id="T_30ba0_row2_col5" class="data row2 col5" >6.100000</td>
+      <td id="T_30ba0_row2_col6" class="data row2 col6" >0.100000</td>
     </tr>
     <tr>
-      <th id="T_8500f_level0_row3" class="row_heading level0 row3" >0</th>
-      <td id="T_8500f_row3_col0" class="data row3 col0" >None</td>
-      <td id="T_8500f_row3_col1" class="data row3 col1" >washingtonnationals vs atlantabraves</td>
-      <td id="T_8500f_row3_col2" class="data row3 col2" >AJ Smith-Shawver</td>
-      <td id="T_8500f_row3_col3" class="data row3 col3" >Trevor Williams</td>
-      <td id="T_8500f_row3_col4" class="data row3 col4" >5.500000</td>
-      <td id="T_8500f_row3_col5" class="data row3 col5" >6.600000</td>
-      <td id="T_8500f_row3_col6" class="data row3 col6" >0.400000</td>
+      <th id="T_30ba0_level0_row3" class="row_heading level0 row3" >13</th>
+      <td id="T_30ba0_row3_col0" class="data row3 col0" >None</td>
+      <td id="T_30ba0_row3_col1" class="data row3 col1" >losangelesangels vs losangelesdodgers</td>
+      <td id="T_30ba0_row3_col2" class="data row3 col2" >Dustin May</td>
+      <td id="T_30ba0_row3_col3" class="data row3 col3" >Jack Kochanowicz</td>
+      <td id="T_30ba0_row3_col4" class="data row3 col4" >3.800000</td>
+      <td id="T_30ba0_row3_col5" class="data row3 col5" >5.900000</td>
+      <td id="T_30ba0_row3_col6" class="data row3 col6" >0.200000</td>
     </tr>
     <tr>
-      <th id="T_8500f_level0_row4" class="row_heading level0 row4" >4</th>
-      <td id="T_8500f_row4_col0" class="data row4 col0" >None</td>
-      <td id="T_8500f_row4_col1" class="data row4 col1" >houstonastros vs texasrangers</td>
-      <td id="T_8500f_row4_col2" class="data row4 col2" >Jacob deGrom</td>
-      <td id="T_8500f_row4_col3" class="data row4 col3" >Hunter Brown</td>
-      <td id="T_8500f_row4_col4" class="data row4 col4" >5.900000</td>
-      <td id="T_8500f_row4_col5" class="data row4 col5" >6.300000</td>
-      <td id="T_8500f_row4_col6" class="data row4 col6" >0.400000</td>
+      <th id="T_30ba0_level0_row4" class="row_heading level0 row4" >8</th>
+      <td id="T_30ba0_row4_col0" class="data row4 col0" >None</td>
+      <td id="T_30ba0_row4_col1" class="data row4 col1" >st.louiscardinals vs kansascityroyals</td>
+      <td id="T_30ba0_row4_col2" class="data row4 col2" >Cole Ragans</td>
+      <td id="T_30ba0_row4_col3" class="data row4 col3" >Andre Pallante</td>
+      <td id="T_30ba0_row4_col4" class="data row4 col4" >3.200000</td>
+      <td id="T_30ba0_row4_col5" class="data row4 col5" >7.700000</td>
+      <td id="T_30ba0_row4_col6" class="data row4 col6" >0.200000</td>
     </tr>
     <tr>
-      <th id="T_8500f_level0_row5" class="row_heading level0 row5" >5</th>
-      <td id="T_8500f_row5_col0" class="data row5 col0" >None</td>
-      <td id="T_8500f_row5_col1" class="data row5 col1" >oaklandathletics vs losangelesdodgers</td>
-      <td id="T_8500f_row5_col2" class="data row5 col2" >Matt Sauer</td>
-      <td id="T_8500f_row5_col3" class="data row5 col3" >Osvaldo Bido</td>
-      <td id="T_8500f_row5_col4" class="data row5 col4" >5.400000</td>
-      <td id="T_8500f_row5_col5" class="data row5 col5" >19.500000</td>
-      <td id="T_8500f_row5_col6" class="data row5 col6" >1.100000</td>
+      <th id="T_30ba0_level0_row5" class="row_heading level0 row5" >14</th>
+      <td id="T_30ba0_row5_col0" class="data row5 col0" >None</td>
+      <td id="T_30ba0_row5_col1" class="data row5 col1" >oaklandathletics vs sanfranciscogiants</td>
+      <td id="T_30ba0_row5_col2" class="data row5 col2" >Logan Webb</td>
+      <td id="T_30ba0_row5_col3" class="data row5 col3" >JP Sears</td>
+      <td id="T_30ba0_row5_col4" class="data row5 col4" >3.900000</td>
+      <td id="T_30ba0_row5_col5" class="data row5 col5" >5.800000</td>
+      <td id="T_30ba0_row5_col6" class="data row5 col6" >0.200000</td>
+    </tr>
+    <tr>
+      <th id="T_30ba0_level0_row6" class="row_heading level0 row6" >10</th>
+      <td id="T_30ba0_row6_col0" class="data row6 col0" >None</td>
+      <td id="T_30ba0_row6_col1" class="data row6 col1" >minnesotatwins vs milwaukeebrewers</td>
+      <td id="T_30ba0_row6_col2" class="data row6 col2" >Chad Patrick</td>
+      <td id="T_30ba0_row6_col3" class="data row6 col3" >Joe Ryan</td>
+      <td id="T_30ba0_row6_col4" class="data row6 col4" >8.900000</td>
+      <td id="T_30ba0_row6_col5" class="data row6 col5" >3.400000</td>
+      <td id="T_30ba0_row6_col6" class="data row6 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_30ba0_level0_row7" class="row_heading level0 row7" >1</th>
+      <td id="T_30ba0_row7_col0" class="data row7 col0" >None</td>
+      <td id="T_30ba0_row7_col1" class="data row7 col1" >clevelandguardians vs cincinnatireds</td>
+      <td id="T_30ba0_row7_col2" class="data row7 col2" >Brady Singer</td>
+      <td id="T_30ba0_row7_col3" class="data row7 col3" >Tanner Bibee</td>
+      <td id="T_30ba0_row7_col4" class="data row7 col4" >5.900000</td>
+      <td id="T_30ba0_row7_col5" class="data row7 col5" >6.000000</td>
+      <td id="T_30ba0_row7_col6" class="data row7 col6" >0.400000</td>
+    </tr>
+    <tr>
+      <th id="T_30ba0_level0_row8" class="row_heading level0 row8" >3</th>
+      <td id="T_30ba0_row8_col0" class="data row8 col0" >None</td>
+      <td id="T_30ba0_row8_col1" class="data row8 col1" >washingtonnationals vs baltimoreorioles</td>
+      <td id="T_30ba0_row8_col2" class="data row8 col2" >Cade Povich</td>
+      <td id="T_30ba0_row8_col3" class="data row8 col3" >MacKenzie Gore</td>
+      <td id="T_30ba0_row8_col4" class="data row8 col4" >7.300000</td>
+      <td id="T_30ba0_row8_col5" class="data row8 col5" >5.400000</td>
+      <td id="T_30ba0_row8_col6" class="data row8 col6" >0.400000</td>
+    </tr>
+    <tr>
+      <th id="T_30ba0_level0_row9" class="row_heading level0 row9" >5</th>
+      <td id="T_30ba0_row9_col0" class="data row9 col0" >None</td>
+      <td id="T_30ba0_row9_col1" class="data row9 col1" >detroittigers vs torontobluejays</td>
+      <td id="T_30ba0_row9_col2" class="data row9 col2" >Bowden Francis</td>
+      <td id="T_30ba0_row9_col3" class="data row9 col3" >Jack Flaherty</td>
+      <td id="T_30ba0_row9_col4" class="data row9 col4" >6.500000</td>
+      <td id="T_30ba0_row9_col5" class="data row9 col5" >7.900000</td>
+      <td id="T_30ba0_row9_col6" class="data row9 col6" >0.500000</td>
+    </tr>
+    <tr>
+      <th id="T_30ba0_level0_row10" class="row_heading level0 row10" >7</th>
+      <td id="T_30ba0_row10_col0" class="data row10 col0" >None</td>
+      <td id="T_30ba0_row10_col1" class="data row10 col1" >tampabayrays vs miamimarlins</td>
+      <td id="T_30ba0_row10_col2" class="data row10 col2" >Max Meyer</td>
+      <td id="T_30ba0_row10_col3" class="data row10 col3" >Taj Bradley</td>
+      <td id="T_30ba0_row10_col4" class="data row10 col4" >6.800000</td>
+      <td id="T_30ba0_row10_col5" class="data row10 col5" >7.400000</td>
+      <td id="T_30ba0_row10_col6" class="data row10 col6" >0.500000</td>
+    </tr>
+    <tr>
+      <th id="T_30ba0_level0_row11" class="row_heading level0 row11" >6</th>
+      <td id="T_30ba0_row11_col0" class="data row11 col0" >None</td>
+      <td id="T_30ba0_row11_col1" class="data row11 col1" >atlantabraves vs bostonredsox</td>
+      <td id="T_30ba0_row11_col2" class="data row11 col2" >Garrett Crochet</td>
+      <td id="T_30ba0_row11_col3" class="data row11 col3" >Chris Sale</td>
+      <td id="T_30ba0_row11_col4" class="data row11 col4" >7.100000</td>
+      <td id="T_30ba0_row11_col5" class="data row11 col5" >9.100000</td>
+      <td id="T_30ba0_row11_col6" class="data row11 col6" >0.600000</td>
+    </tr>
+    <tr>
+      <th id="T_30ba0_level0_row12" class="row_heading level0 row12" >2</th>
+      <td id="T_30ba0_row12_col0" class="data row12 col0" >None</td>
+      <td id="T_30ba0_row12_col1" class="data row12 col1" >pittsburghpirates vs philadelphiaphillies</td>
+      <td id="T_30ba0_row12_col2" class="data row12 col2" >Ranger Suarez</td>
+      <td id="T_30ba0_row12_col3" class="data row12 col3" >Andrew Heaney</td>
+      <td id="T_30ba0_row12_col4" class="data row12 col4" >3.200000</td>
+      <td id="T_30ba0_row12_col5" class="data row12 col5" >61.900000</td>
+      <td id="T_30ba0_row12_col6" class="data row12 col6" >2.000000</td>
+    </tr>
+    <tr>
+      <th id="T_30ba0_level0_row13" class="row_heading level0 row13" >11</th>
+      <td id="T_30ba0_row13_col0" class="data row13 col0" >None</td>
+      <td id="T_30ba0_row13_col1" class="data row13 col1" >coloradorockies vs arizonadiamondbacks</td>
+      <td id="T_30ba0_row13_col2" class="data row13 col2" >Corbin Burnes</td>
+      <td id="T_30ba0_row13_col3" class="data row13 col3" >Carson Palmquist</td>
+      <td id="T_30ba0_row13_col4" class="data row13 col4" >59.700000</td>
+      <td id="T_30ba0_row13_col5" class="data row13 col5" >6.900000</td>
+      <td id="T_30ba0_row13_col6" class="data row13 col6" >4.100000</td>
+    </tr>
+    <tr>
+      <th id="T_30ba0_level0_row14" class="row_heading level0 row14" >4</th>
+      <td id="T_30ba0_row14_col0" class="data row14 col0" >None</td>
+      <td id="T_30ba0_row14_col1" class="data row14 col1" >newyorkmets vs newyorkyankees</td>
+      <td id="T_30ba0_row14_col2" class="data row14 col2" >Carlos Rodon</td>
+      <td id="T_30ba0_row14_col3" class="data row14 col3" >Tylor Megill</td>
+      <td id="T_30ba0_row14_col4" class="data row14 col4" >6.800000</td>
+      <td id="T_30ba0_row14_col5" class="data row14 col5" >61.500000</td>
+      <td id="T_30ba0_row14_col6" class="data row14 col6" >4.200000</td>
     </tr>
   </tbody>
 </table>
