--- a/top_props.html
+++ b/top_props.html
@@ -33,12 +33,12 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Dylan Cease over 7.1 Ks</h3>
-    <p>Great K% matchup vs Pirates — projected for 7.1 strikeouts.</p>
+    <h3>Dylan Cease racks up Ks today</h3>
+    <p>Dylan Cease is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Rafael Devers HR prop</h3>
+    <h3>Rafael Devers to hit a HR</h3>
     <p>Power bat with 2 HRs and strong contact vs Spencer Schwellenbach.</p>
 </div>
 
@@ -48,13 +48,13 @@
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — milwaukeebrewers vs philadelphiaphillies</h3>
-    <p>Two quick starters: Jesus Luzardo and Chad Patrick.</p>
+    <h3>NRFI: milwaukeebrewers vs philadelphiaphillies</h3>
+    <p>Low 1st-inning scoring profile with Jesus Luzardo and Chad Patrick.</p>
 </div>
 
 <div class="prop-card">
     <h3><span class="blurred">Minnesota Twins vs Seattle Mariners run fest?</span></h3>
-    <p><span class="blurred">99.0% model chance of a high-scoring affair at T-Mobile Park.</span></p>
+    <p><span class="blurred">T-Mobile Park is a run-friendly park — 99.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
