--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Dylan Cease racks up Ks today</h3>
-    <p>Dylan Cease is in a prime strikeout spot today.</p>
+    <h3>Garrett Crochet is projected to whiff 7.0</h3>
+    <p>Great K% matchup vs Braves — projected for 7.0 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Rafael Devers to hit a HR</h3>
-    <p>Power bat with 2 HRs and strong contact vs Spencer Schwellenbach.</p>
+    <h3>Josh Lowe HR prop</h3>
+    <p>Josh Lowe has hit 1 already and owns a 66.7% hard-hit rate vs Hunter Brown.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Maikel Garcia knocks one?</h3>
-    <p>Riding a 14-game hit streak.</p>
+    <h3>Brandon Lowe to record a hit</h3>
+    <p>🔥 13 straight games with a hit.</p>
 </div>
 
 <div class="prop-card">
     <h3>NRFI: milwaukeebrewers vs philadelphiaphillies</h3>
-    <p>Low 1st-inning scoring profile with Jesus Luzardo and Chad Patrick.</p>
+    <p>Two quick starters: Ranger Suarez and Jose Quintana.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Minnesota Twins vs Seattle Mariners run fest?</span></h3>
-    <p><span class="blurred">T-Mobile Park is a run-friendly park — 99.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Oakland Athletics vs Toronto Blue Jays — total runs over</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Rogers Centre (0.0%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
