--- a/nrfi.html
+++ b/nrfi.html
@@ -29,111 +29,111 @@ a:hover {text-decoration: underline;}
 
 <h1 style='text-align:center;font-family:sans-serif;'>NRFI Predictions for 2025-06-02</h1>
 <style type="text/css">
-#T_04380_row0_col0, #T_04380_row0_col1, #T_04380_row0_col2, #T_04380_row0_col3, #T_04380_row0_col4, #T_04380_row0_col5, #T_04380_row0_col6 {
+#T_4d433_row0_col0, #T_4d433_row0_col1, #T_4d433_row0_col2, #T_4d433_row0_col3, #T_4d433_row0_col4, #T_4d433_row0_col5, #T_4d433_row0_col6 {
   background-color: rgba(0, 104, 55, 0.6);
 }
-#T_04380_row1_col0, #T_04380_row1_col1, #T_04380_row1_col2, #T_04380_row1_col3, #T_04380_row1_col4, #T_04380_row1_col5, #T_04380_row1_col6 {
+#T_4d433_row1_col0, #T_4d433_row1_col1, #T_4d433_row1_col2, #T_4d433_row1_col3, #T_4d433_row1_col4, #T_4d433_row1_col5, #T_4d433_row1_col6 {
   background-color: rgba(75, 175, 92, 0.6);
 }
-#T_04380_row2_col0, #T_04380_row2_col1, #T_04380_row2_col2, #T_04380_row2_col3, #T_04380_row2_col4, #T_04380_row2_col5, #T_04380_row2_col6 {
+#T_4d433_row2_col0, #T_4d433_row2_col1, #T_4d433_row2_col2, #T_4d433_row2_col3, #T_4d433_row2_col4, #T_4d433_row2_col5, #T_4d433_row2_col6 {
   background-color: rgba(183, 224, 117, 0.6);
 }
-#T_04380_row3_col0, #T_04380_row3_col1, #T_04380_row3_col2, #T_04380_row3_col3, #T_04380_row3_col4, #T_04380_row3_col5, #T_04380_row3_col6 {
+#T_4d433_row3_col0, #T_4d433_row3_col1, #T_4d433_row3_col2, #T_4d433_row3_col3, #T_4d433_row3_col4, #T_4d433_row3_col5, #T_4d433_row3_col6 {
   background-color: rgba(254, 254, 189, 0.6);
 }
-#T_04380_row4_col0, #T_04380_row4_col1, #T_04380_row4_col2, #T_04380_row4_col3, #T_04380_row4_col4, #T_04380_row4_col5, #T_04380_row4_col6 {
+#T_4d433_row4_col0, #T_4d433_row4_col1, #T_4d433_row4_col2, #T_4d433_row4_col3, #T_4d433_row4_col4, #T_4d433_row4_col5, #T_4d433_row4_col6 {
   background-color: rgba(253, 190, 111, 0.6);
 }
-#T_04380_row5_col0, #T_04380_row5_col1, #T_04380_row5_col2, #T_04380_row5_col3, #T_04380_row5_col4, #T_04380_row5_col5, #T_04380_row5_col6 {
+#T_4d433_row5_col0, #T_4d433_row5_col1, #T_4d433_row5_col2, #T_4d433_row5_col3, #T_4d433_row5_col4, #T_4d433_row5_col5, #T_4d433_row5_col6 {
   background-color: rgba(233, 87, 57, 0.6);
 }
-#T_04380_row6_col0, #T_04380_row6_col1, #T_04380_row6_col2, #T_04380_row6_col3, #T_04380_row6_col4, #T_04380_row6_col5, #T_04380_row6_col6 {
+#T_4d433_row6_col0, #T_4d433_row6_col1, #T_4d433_row6_col2, #T_4d433_row6_col3, #T_4d433_row6_col4, #T_4d433_row6_col5, #T_4d433_row6_col6 {
   background-color: rgba(165, 0, 38, 0.6);
 }
 </style>
-<table id="T_04380">
+<table id="T_4d433">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
-      <th id="T_04380_level0_col0" class="col_heading level0 col0" >Game Time</th>
-      <th id="T_04380_level0_col1" class="col_heading level0 col1" >Matchup</th>
-      <th id="T_04380_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
-      <th id="T_04380_level0_col3" class="col_heading level0 col3" >Away Pitcher</th>
-      <th id="T_04380_level0_col4" class="col_heading level0 col4" >Top Half NRFI (%)</th>
-      <th id="T_04380_level0_col5" class="col_heading level0 col5" >Bottom Half NRFI (%)</th>
-      <th id="T_04380_level0_col6" class="col_heading level0 col6" >Final NRFI Probability (%)</th>
+      <th id="T_4d433_level0_col0" class="col_heading level0 col0" >Game Time</th>
+      <th id="T_4d433_level0_col1" class="col_heading level0 col1" >Matchup</th>
+      <th id="T_4d433_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
+      <th id="T_4d433_level0_col3" class="col_heading level0 col3" >Away Pitcher</th>
+      <th id="T_4d433_level0_col4" class="col_heading level0 col4" >Top Half NRFI (%)</th>
+      <th id="T_4d433_level0_col5" class="col_heading level0 col5" >Bottom Half NRFI (%)</th>
+      <th id="T_4d433_level0_col6" class="col_heading level0 col6" >Final NRFI Probability (%)</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th id="T_04380_level0_row0" class="row_heading level0 row0" >1</th>
-      <td id="T_04380_row0_col0" class="data row0 col0" >None</td>
-      <td id="T_04380_row0_col1" class="data row0 col1" >losangelesangels vs bostonredsox</td>
-      <td id="T_04380_row0_col2" class="data row0 col2" >Richard Fitts</td>
-      <td id="T_04380_row0_col3" class="data row0 col3" >Tyler Anderson</td>
-      <td id="T_04380_row0_col4" class="data row0 col4" >4.800000</td>
-      <td id="T_04380_row0_col5" class="data row0 col5" >3.000000</td>
-      <td id="T_04380_row0_col6" class="data row0 col6" >0.100000</td>
+      <th id="T_4d433_level0_row0" class="row_heading level0 row0" >1</th>
+      <td id="T_4d433_row0_col0" class="data row0 col0" >None</td>
+      <td id="T_4d433_row0_col1" class="data row0 col1" >losangelesangels vs bostonredsox</td>
+      <td id="T_4d433_row0_col2" class="data row0 col2" >Richard Fitts</td>
+      <td id="T_4d433_row0_col3" class="data row0 col3" >Tyler Anderson</td>
+      <td id="T_4d433_row0_col4" class="data row0 col4" >4.800000</td>
+      <td id="T_4d433_row0_col5" class="data row0 col5" >3.200000</td>
+      <td id="T_4d433_row0_col6" class="data row0 col6" >0.200000</td>
     </tr>
     <tr>
-      <th id="T_04380_level0_row1" class="row_heading level0 row1" >3</th>
-      <td id="T_04380_row1_col0" class="data row1 col0" >None</td>
-      <td id="T_04380_row1_col1" class="data row1 col1" >detroittigers vs chicagowhitesox</td>
-      <td id="T_04380_row1_col2" class="data row1 col2" >Jonathan Cannon</td>
-      <td id="T_04380_row1_col3" class="data row1 col3" >Jack Flaherty</td>
-      <td id="T_04380_row1_col4" class="data row1 col4" >5.900000</td>
-      <td id="T_04380_row1_col5" class="data row1 col5" >3.400000</td>
-      <td id="T_04380_row1_col6" class="data row1 col6" >0.200000</td>
+      <th id="T_4d433_level0_row1" class="row_heading level0 row1" >3</th>
+      <td id="T_4d433_row1_col0" class="data row1 col0" >None</td>
+      <td id="T_4d433_row1_col1" class="data row1 col1" >detroittigers vs chicagowhitesox</td>
+      <td id="T_4d433_row1_col2" class="data row1 col2" >Jonathan Cannon</td>
+      <td id="T_4d433_row1_col3" class="data row1 col3" >Jack Flaherty</td>
+      <td id="T_4d433_row1_col4" class="data row1 col4" >5.900000</td>
+      <td id="T_4d433_row1_col5" class="data row1 col5" >3.500000</td>
+      <td id="T_4d433_row1_col6" class="data row1 col6" >0.200000</td>
     </tr>
     <tr>
-      <th id="T_04380_level0_row2" class="row_heading level0 row2" >4</th>
-      <td id="T_04380_row2_col0" class="data row2 col0" >None</td>
-      <td id="T_04380_row2_col1" class="data row2 col1" >sandiegopadres vs sanfranciscogiants</td>
-      <td id="T_04380_row2_col2" class="data row2 col2" >Logan Webb</td>
-      <td id="T_04380_row2_col3" class="data row2 col3" >Stephen Kolek</td>
-      <td id="T_04380_row2_col4" class="data row2 col4" >3.900000</td>
-      <td id="T_04380_row2_col5" class="data row2 col5" >5.100000</td>
-      <td id="T_04380_row2_col6" class="data row2 col6" >0.200000</td>
+      <th id="T_4d433_level0_row2" class="row_heading level0 row2" >4</th>
+      <td id="T_4d433_row2_col0" class="data row2 col0" >None</td>
+      <td id="T_4d433_row2_col1" class="data row2 col1" >sandiegopadres vs sanfranciscogiants</td>
+      <td id="T_4d433_row2_col2" class="data row2 col2" >Logan Webb</td>
+      <td id="T_4d433_row2_col3" class="data row2 col3" >Stephen Kolek</td>
+      <td id="T_4d433_row2_col4" class="data row2 col4" >3.900000</td>
+      <td id="T_4d433_row2_col5" class="data row2 col5" >5.100000</td>
+      <td id="T_4d433_row2_col6" class="data row2 col6" >0.200000</td>
     </tr>
     <tr>
-      <th id="T_04380_level0_row3" class="row_heading level0 row3" >6</th>
-      <td id="T_04380_row3_col0" class="data row3 col0" >None</td>
-      <td id="T_04380_row3_col1" class="data row3 col1" >newyorkmets vs losangelesdodgers</td>
-      <td id="T_04380_row3_col2" class="data row3 col2" >Dustin May</td>
-      <td id="T_04380_row3_col3" class="data row3 col3" >Paul Blackburn</td>
-      <td id="T_04380_row3_col4" class="data row3 col4" >4.700000</td>
-      <td id="T_04380_row3_col5" class="data row3 col5" >5.900000</td>
-      <td id="T_04380_row3_col6" class="data row3 col6" >0.300000</td>
+      <th id="T_4d433_level0_row3" class="row_heading level0 row3" >6</th>
+      <td id="T_4d433_row3_col0" class="data row3 col0" >None</td>
+      <td id="T_4d433_row3_col1" class="data row3 col1" >newyorkmets vs losangelesdodgers</td>
+      <td id="T_4d433_row3_col2" class="data row3 col2" >Dustin May</td>
+      <td id="T_4d433_row3_col3" class="data row3 col3" >Paul Blackburn</td>
+      <td id="T_4d433_row3_col4" class="data row3 col4" >4.700000</td>
+      <td id="T_4d433_row3_col5" class="data row3 col5" >5.900000</td>
+      <td id="T_4d433_row3_col6" class="data row3 col6" >0.300000</td>
     </tr>
     <tr>
-      <th id="T_04380_level0_row4" class="row_heading level0 row4" >2</th>
-      <td id="T_04380_row4_col0" class="data row4 col0" >None</td>
-      <td id="T_04380_row4_col1" class="data row4 col1" >milwaukeebrewers vs cincinnatireds</td>
-      <td id="T_04380_row4_col2" class="data row4 col2" >Brady Singer</td>
-      <td id="T_04380_row4_col3" class="data row4 col3" >Aaron Civale</td>
-      <td id="T_04380_row4_col4" class="data row4 col4" >6.800000</td>
-      <td id="T_04380_row4_col5" class="data row4 col5" >5.500000</td>
-      <td id="T_04380_row4_col6" class="data row4 col6" >0.400000</td>
+      <th id="T_4d433_level0_row4" class="row_heading level0 row4" >2</th>
+      <td id="T_4d433_row4_col0" class="data row4 col0" >None</td>
+      <td id="T_4d433_row4_col1" class="data row4 col1" >milwaukeebrewers vs cincinnatireds</td>
+      <td id="T_4d433_row4_col2" class="data row4 col2" >Brady Singer</td>
+      <td id="T_4d433_row4_col3" class="data row4 col3" >Aaron Civale</td>
+      <td id="T_4d433_row4_col4" class="data row4 col4" >6.700000</td>
+      <td id="T_4d433_row4_col5" class="data row4 col5" >5.500000</td>
+      <td id="T_4d433_row4_col6" class="data row4 col6" >0.400000</td>
     </tr>
     <tr>
-      <th id="T_04380_level0_row5" class="row_heading level0 row5" >5</th>
-      <td id="T_04380_row5_col0" class="data row5 col0" >None</td>
-      <td id="T_04380_row5_col1" class="data row5 col1" >minnesotatwins vs oaklandathletics</td>
-      <td id="T_04380_row5_col2" class="data row5 col2" >Luis Severino</td>
-      <td id="T_04380_row5_col3" class="data row5 col3" >Joe Ryan</td>
-      <td id="T_04380_row5_col4" class="data row5 col4" >7.800000</td>
-      <td id="T_04380_row5_col5" class="data row5 col5" >7.300000</td>
-      <td id="T_04380_row5_col6" class="data row5 col6" >0.600000</td>
+      <th id="T_4d433_level0_row5" class="row_heading level0 row5" >5</th>
+      <td id="T_4d433_row5_col0" class="data row5 col0" >None</td>
+      <td id="T_4d433_row5_col1" class="data row5 col1" >minnesotatwins vs oaklandathletics</td>
+      <td id="T_4d433_row5_col2" class="data row5 col2" >Luis Severino</td>
+      <td id="T_4d433_row5_col3" class="data row5 col3" >Joe Ryan</td>
+      <td id="T_4d433_row5_col4" class="data row5 col4" >7.800000</td>
+      <td id="T_4d433_row5_col5" class="data row5 col5" >7.300000</td>
+      <td id="T_4d433_row5_col6" class="data row5 col6" >0.600000</td>
     </tr>
     <tr>
-      <th id="T_04380_level0_row6" class="row_heading level0 row6" >0</th>
-      <td id="T_04380_row6_col0" class="data row6 col0" >None</td>
-      <td id="T_04380_row6_col1" class="data row6 col1" >coloradorockies vs miamimarlins</td>
-      <td id="T_04380_row6_col2" class="data row6 col2" >Max Meyer</td>
-      <td id="T_04380_row6_col3" class="data row6 col3" >German Marquez</td>
-      <td id="T_04380_row6_col4" class="data row6 col4" >60.800000</td>
-      <td id="T_04380_row6_col5" class="data row6 col5" >8.000000</td>
-      <td id="T_04380_row6_col6" class="data row6 col6" >4.900000</td>
+      <th id="T_4d433_level0_row6" class="row_heading level0 row6" >0</th>
+      <td id="T_4d433_row6_col0" class="data row6 col0" >None</td>
+      <td id="T_4d433_row6_col1" class="data row6 col1" >coloradorockies vs miamimarlins</td>
+      <td id="T_4d433_row6_col2" class="data row6 col2" >Max Meyer</td>
+      <td id="T_4d433_row6_col3" class="data row6 col3" >German Marquez</td>
+      <td id="T_4d433_row6_col4" class="data row6 col4" >56.600000</td>
+      <td id="T_4d433_row6_col5" class="data row6 col5" >8.100000</td>
+      <td id="T_4d433_row6_col6" class="data row6 col6" >4.600000</td>
     </tr>
   </tbody>
 </table>
