--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Joe Ryan racks up Ks today</h3>
-    <p>Joe Ryan faces Athletics, who strike out 24.8% of the time.</p>
+    <h3>Joe Ryan over 8.7 Ks</h3>
+    <p>Great K% matchup vs Athletics — projected for 8.7 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Kerry Carpenter has HR potential</h3>
-    <p>Power bat with 2 HRs and strong contact vs Jonathan Cannon.</p>
+    <h3>Kerry Carpenter HR prop</h3>
+    <p>62.5% hard-hit rate vs Jonathan Cannon — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
     <h3>Patrick Bailey to record a hit</h3>
-    <p>Batting 1.0 vs Stephen Kolek — strong contact spot.</p>
+    <p>1.0 AVG vs Stephen Kolek makes this a clean look.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: coloradorockies vs miamimarlins</h3>
-    <p>Low 1st-inning scoring profile with Max Meyer and German Marquez.</p>
+    <h3>No Run 1st Inning — coloradorockies vs miamimarlins</h3>
+    <p>Max Meyer and German Marquez tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Colorado Rockies vs Miami Marlins run fest?</span></h3>
-    <p><span class="blurred">loanDepot park is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">Colorado Rockies vs Miami Marlins — total runs over</span></h3>
+    <p><span class="blurred">All signs point to a shootout at loanDepot park (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
