--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Zebby Matthews racks up Ks today</h3>
-    <p>Zebby Matthews is in a prime strikeout spot today.</p>
+    <h3>Cole Ragans over 6.6 Ks</h3>
+    <p>Cole Ragans is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Kyle Manzardo to hit a HR</h3>
-    <p>Power bat with 2 HRs and strong contact vs Clarke Schmidt.</p>
+    <h3>Eugenio Suarez HR prop</h3>
+    <p>Eugenio Suarez has hit 3 already and owns a 75.0% hard-hit rate vs Grant Holmes.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Carlos Santana to record a hit</h3>
-    <p>Riding a 11-game hit streak.</p>
+    <h3>Alex Verdugo knocks one?</h3>
+    <p>Batting 1.0 vs Brandon Pfaadt — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: philadelphiaphillies vs torontobluejays</h3>
-    <p>Two quick starters: Jose Berrios and Mick Abel.</p>
+    <h3>philadelphiaphillies vs torontobluejays NRFI Pick</h3>
+    <p>Chris Bassitt and Jesus Luzardo tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Colorado Rockies vs Miami Marlins — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at loanDepot park (nan%).</span></p>
+    <h3><span class="blurred">Arizona Diamondbacks vs Atlanta Braves run fest?</span></h3>
+    <p><span class="blurred">Truist Park is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
