--- a/top_props.html
+++ b/top_props.html
@@ -33,18 +33,18 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Tarik Skubal over 6.9 Ks</h3>
-    <p>Great K% matchup vs Cubs — projected for 6.9 strikeouts.</p>
+    <h3>Tarik Skubal racks up Ks today</h3>
+    <p>Tarik Skubal faces Cubs, who strike out 20.3% of the time.</p>
 </div>
 
 <div class="prop-card">
     <h3>Cody Bellinger HR prop</h3>
-    <p>Power bat with 1 HRs and strong contact vs Walker Buehler.</p>
+    <p>Cody Bellinger has hit 1 already and owns a 80.0% hard-hit rate vs Walker Buehler.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Carlos Santana to record a hit</h3>
-    <p>13-game streak — bat is staying hot.</p>
+    <h3>Salvador Perez knocks one?</h3>
+    <p>1.0 AVG vs Davis Martin makes this a clean look.</p>
 </div>
 
 <div class="prop-card">
@@ -53,7 +53,7 @@
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Miami Marlins vs Tampa Bay Rays run fest?</span></h3>
+    <h3><span class="blurred">Miami Marlins vs Tampa Bay Rays — total runs over</span></h3>
     <p><span class="blurred">All signs point to a shootout at George M. Steinbrenner Field (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
